Fix dialog and align team images

--- a/common.css
+++ b/common.css
@@ -1,5 +1,4 @@
-* {
-}
+* {}
 
 body {
 	background-color: #608FBD;
@@ -18,10 +17,14 @@ body {
 
 #dialog {
 	opacity: 0;
-	position: absolute;
-	margin: 0;
-	margin-top: -20pt;
-	margin-left: 60pt;
+	position: relative;
+	top: -100px;
+	margin-top: -100px;
+	left: -450px;
+}
+
+#banner:hover+#dialog {
+	opacity: 1;
 }
 
 #dialog:hover {
@@ -61,6 +64,7 @@ body {
 
 .team {
 	padding: 0 20pt;
+	width: 85px;
 }
 
 .team :hover {
